# lab_riddle_database

./: database.sqlite  database.sqlite-journal  pyproject.toml
app/: models.py  views.py
