[tool.poetry]
name = "lab-riddle-database"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "lab_riddle_database"}]

[tool.poetry.dependencies]
python = "^3.10"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
